@@ -1,26 +1,0 @@
-#! /bin/sh
-#
-# $Id$
-#
-
-prefix=@prefix@
-exec_prefix=@exec_prefix@
-libexecdir=@libexecdir@
-datadir=@datadir@
-SED=@SED@
-EXTRA_LIBS="@EXTRA_LIBS@"
-
-GARLIC=${prefix}/lib/garlic
-GREP=grep
-
-PATH=@libexecdir@:${PATH}
-export PATH
-
-if test $# = 0; then
-  dist1
-  exit 1
-fi
-
-LIBS="${GARLIC}/libgarlic.a ${GARLIC}/libgnat.a ${EXTRA_LIBS}"
-
-eval dist1 -I${GARLIC} -L${GARLIC} "$@" -largs ${LIBS}
